k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
spec:
  rules:
  - host: static.awschandra.club
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: static-svc
            port: 
              number: 80
